traces/bug_532.txt
examples++-mpi/complex_SuperLU_DIST_FreeFem.cpp:567: error: DEAD_STORE
  The value written to &ldb (type int) is never used.
Showing all 1 steps of the trace


examples++-mpi/complex_SuperLU_DIST_FreeFem.cpp:567:5: Write of unused value
565.       SuperLUStat_t  stat;
566.       int            iam;
567.       int            info=0, ldb=m, nrhs=1;
           ^
568.       int            i;
569.       double*        berr;
